--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <title> </title>
     <body> 
-    <nav> 
+    <nav id=navbar> 
       <ul> 
       <li> <a href=>''</a></li>
       <li> <a href=>''</a> </li>
