--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viweport" content= "width=device-width,initial-scale=1.0"> 
 <head>
-  <title> </title>
+  <title> 'Lurked in' </title>
     <body> 
     <nav id=navbar> 
       <ul> 
-      <li> <a href=>''</a></li>
-      <li> <a href=>''</a> </li>
-      <li> <a href=>''</a> </li> 
+      <li> <a href= class='glitch'>''</a></li>
+      <li> <a href=class='glitch'>''</a> </li>
+      <li> <a href=class='glitch'>''</a> </li> 
       </ul>
            </nav>
     <br> 
