--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta name="viweport" content= "width=device-width,initial-scale=1.0"> 
 <head>
   <title> 'Lurked in' </title>
+  link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <body> 
     <nav id=navbar> 
       <ul> 
       <li> <a href= class='glitch'>''</a></li>
-      <li> <a href=class='glitch'>''</a> </li>
-      <li> <a href=class='glitch'>''</a> </li> 
+      <li> <a href= class='glitch'>''</a> </li>
+      <li> <a href= class='glitch'>''</a> </li> 
       </ul>
            </nav>
     <br> 
       <div class='profile'> 
-        <img src= alt="profile picture">
+        <img src= chill.img.png alt="profile picture"><p>
+          THE chill guy 
+        </p>
         <br> 
         <div class=news> 
-          <a href=> </a> 
+          <a href= > </a> 
         </div>
         <div class = main feed> 
 
