--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <title> 'Lurked in' </title>
   link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+  <header> 
     <body> 
     <nav id=navbar> 
       <ul> 
-      <li> <a href= class='glitch'>''</a></li>
-      <li> <a href= class='glitch'>''</a> </li>
-      <li> <a href= class='glitch'>''</a> </li> 
+      <li> <a href= index.html class='glitch'>'home'</a></li>
+      <li> <a href= me.page.html class='glitch'>'profile'</a> </li>
+      <li> <a href= class='glitch'>'jobs'</a> </li> 
       </ul>
            </nav>
+      </header>
     <br> 
       <div class='profile'> 
         <img src= chill.img.png alt="profile picture"><p>
