--- a/me_page.html
+++ b/me_page.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">    
+<head>
+    <meta charset="UTF-8">
+    <title>LurkedIn</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
+</head>
+<body>
+    <header>
+        <div class="header" id="container"> 
+            <h1 >LurkedIn </h1>
+                <a href="index.html"><p>home</p></a>
+                <button type="image" class="header-butt" id="me">
+                    <a href="me_page.html"><img src="chill_guy.png" alt="a chill guy" class="header-butt">
+                    me
+                </button></a>
+                
+        </div>
+    </header>
 
+    <div id="boxie">
+        <p>better</p>
+    </div>
+</html>
