added more code on these files

--- a/home_page.html
+++ b/home_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LurkedIn</title>
+    <title>LinkedRot</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 
@@ -11,10 +11,10 @@
     <header>
         
         <div class="header" id="container"> 
-            <h1>LurkedIn </h1>
+            <h1 class="blink">LinkedRot </h1>
                 <a href="index.html"><p id="home">Home</p></a>
                 <button type="image" class="header-butt" id="me">
-                    <a href="me_page.html"><img src="chill_guy.png" alt="a chill guy" class="header-butt">
+                    <a href="me_page.html"><img src="./images/chill_guy.png" alt="a chill guy" class="header-butt">
                     Me
                 </button></a>
         </div>
@@ -22,16 +22,35 @@
 
     <div id="left-box">
         <div id="inside-boxleft">
-            <button type='button'class="header-butt" id="left-img1"><img src= 'chill_guy.png' class='header-butt-img' alt="profile pic"><p>Chill Guy
-          </p></button></a> 
+            <button type='button'class="header-butt" id="left-img1"><a href="me_page.html"><img src= './images/chill_guy.png' class='header-butt-img' alt="profile pic"><p id="left-text">Chill Guy
+          </p></button></a>
         </div>
         <div>
-            <p id="lower-text">inner stuff bro</p>
+            <p id="lower-text">Professional Chill dude | No worries |</p>
         </div>
     </div>
 
     <div id="middle-box1">
-        <button><p>than
-        </p></button>
+        <div><img src=" " class="header-butt" id="middle-box" class="mid"><p class="mid">JOBS JOBS JOBS
+          </p>
+          <br>
+          <p>I GOT THEM</p>
+          <p>SALARY AND BENEFITS: GREAT</p>
+          <p>DUE: YESTERDAY</P>
+          <p class="headline"></p>
+       </div>
+    </div>
+
+    <div id="right-box1">
+        <div> <img src="./images/squiddy.png" class="squid">
+            <p><b>BREAKING NEWS</b>
+          </p>
+          <p class="text">THERE ARE NO JOBS THE GOVERNMENT ATE THEM ALL</p>
+          <p class="text">Officials say they were yummy. </p>
+          <br>
+          <br>
+          <p class="text">More Mewing at 11</p>
+         
+       </div>
 </body>
 </html>
