--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<Doctype HTML> 
+<!Doctype HTML> 
   <HTML land=en > 
     <meta charset="UTF-8">
     <meta name="viweport" content= "width=device-width,initial-scale=1.0"> 
 <head>
   <title> 'Lurked in' </title>
-  link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
   <header> 
     <body> 
     <nav id=navbar> 
       <ul> 
-      <li> <a href= index.html class='glitch'>'home'</a></li>
+      <li> <a href= home_page.html class='glitch'>'home'</a></li>
       <li> <a href= me.page.html class='glitch'>'profile'</a> </li>
       <li> <a href= class='glitch'>'jobs'</a> </li> 
       </ul>
@@ -31,6 +31,5 @@
 </body>
    </head> 
     </HTML> 
-</DoctypeHTML>
 
         
