--- a/me_page.html
+++ b/me_page.html
@@ -2,24 +2,26 @@
 <html lang="en">    
 <head>
     <meta charset="UTF-8">
-    <title>LurkedIn</title>
+    <title>LinkkedRot</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
     <header>
         <div class="header" id="container"> 
-            <h1 >LurkedIn </h1>
-                <a href="index.html"><p>home</p></a>
+            <h1 >LinkedRot </h1>
+                <a href="home_page.html"><p>home</p></a>
                 <button type="image" class="header-butt" id="me">
-                    <a href="me_page.html"><img src="chill_guy.png" alt="a chill guy" class="header-butt">
+                    <a href="me_page.html"><img src="./images/chill_guy.png" alt="a chill guy" class="header-butt">
                     me
                 </button></a>
                 
         </div>
     </header>
-
+    <img src="./images/chill_guy.png" alt="profile picture">
     <div id="boxie">
-        <p>better</p>
+        <audio autoplay hidden>
+         <source src="https://soundcloud.com/giamargaret/hinoki-wood-2?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type= "audio/mpeg">
     </div>
+  
 </html>
